🌐Translate images alt and title

--- a/frappe_pwa/www/install.html
+++ b/frappe_pwa/www/install.html
@@ -19,9 +19,9 @@ right: 100px; bottom: 100px;"></div>
 {{ _("To install a PWA on your Home Screen follow these steps:")}}
 <ul>
     <li>{{_("Tap the 'Share' button of 'Safari'")}}</li>
-    <img src="./assets/ios_share.jpg" alt="Add to iOS Home Screen" title="Add to iOS Home Screen" class="screenshot">
+    <img src="./assets/ios_share.jpg" alt="{{_("Add to iOS Home Screen")}}" title="{{_("Add to iOS Home Screen")}}" class="screenshot">
     <li>{{_("Tap the icon labeled 'Add to Home Screen'")}}</li>
-    <img src="./assets/ios_share_2.jpg" alt="Tap 'Add' in the upper-right corner" title="Tap 'Add' in the upper-right corner" class="screenshot">
+    <img src="./assets/ios_share_2.jpg" alt="{{_("Tap 'Add' in the upper-right corner")}}" title=""{{_("Tap 'Add' in the upper-right corner")}}" class="screenshot">
     <li>{{_("Tap 'Add' in the upper-right corner")}}</li>
     <li>{{_("Confirm the name of the PWA then tap 'Add' in the upper-right corner")}}</li>
     <li>{{_("You can now launch the application from your Home Screen")}}</li>
