--- a/frappe_pwa/www/install.html
+++ b/frappe_pwa/www/install.html
@@ -17,9 +17,9 @@
 {{ _("To install a PWA on your Home Screen follow these steps:")}}
 <ul>
     <li>{{_("Tap the 'Share' button of 'Safari'")}}</li>
-    <img src="./assets/ios_share.jpg" alt="{{_("Add to iOS Home Screen")}}" title="{{_("Add to iOS Home Screen")}}" class="screenshot">
+    <img src="/assets/frappe_pwa/images/ios_share.jpg" alt="{{_("Add to iOS Home Screen")}}" title="{{_("Add to iOS Home Screen")}}" class="screenshot">
     <li>{{_("Tap the icon labeled 'Add to Home Screen'")}}</li>
-    <img src="./assets/ios_share_2.jpg" alt="{{_("Tap 'Add' in the upper-right corner")}}" title=""{{_("Tap 'Add' in the upper-right corner")}}" class="screenshot">
+    <img src="/assets/frappe_pwa/images/ios_share_2.jpg" alt="{{_("Tap 'Add' in the upper-right corner")}}" title=""{{_("Tap 'Add' in the upper-right corner")}}" class="screenshot">
     <li>{{_("Tap 'Add' in the upper-right corner")}}</li>
     <li>{{_("Confirm the name of the PWA then tap 'Add' in the upper-right corner")}}</li>
     <li>{{_("You can now launch the application from your Home Screen")}}</li>
