--- a/frappe_pwa/www/install.html
+++ b/frappe_pwa/www/install.html
@@ -4,17 +4,23 @@
 {% block page_sidebar %}
 {% include "templates/pages/web_sidebar.html" %}
 {% endblock %}
+
 {% block page_content %}
 <h1>{{ _("How to install") }}</h1>
 <h2>{{ _("Learn how to install this application on your device") }}</h2>
-{{ _("This application is actually a Progressive Web App (PWA) that can be directly installed to your device. Learn more about how to install this application on your device:")}}
+<p>{{ _("This application is actually a Progressive Web App (PWA) that can be directly installed to your device. Learn more about how to install this application on your device:")}}</p>
+
+<button class="btn btn-primary btn-pwa-install">{{ _("Install") }}</button>
+
 <h2>{{_("Install on Chrome (desktop)")}}</h2>
 <p>{{_("When using Chrome for Desktop you can click on the menu (the 3 dots in the upper-right corner) then 'Install ...' to add the application to Chrome Applications.")}}</p>
+
 <h2>{{_("Install on Android")}}</h2>
 <p>{{_("Using Chrome for Android you will automatically be prompted to install the app on your system. Click 'Install' to install the application on your device.")}}</p>
 
 <h2>{{ _("Install on iOS") }}</h2>
-{{ _("To install a PWA on your Home Screen follow these steps:")}}
+<p>{{ _("To install a PWA on your Home Screen follow these steps:")}}</p>
+
 <ul>
     <li>{{_("Tap the 'Share' button of 'Safari'")}}</li>
     <img src="/assets/frappe_pwa/images/ios_share.jpg" alt="{{_("Add to iOS Home Screen")}}" title="{{_("Add to iOS Home Screen")}}" class="screenshot">
